--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <td width="25%"> <img src="https://media.istockphoto.com/id/1313860546/vector/greenbiotech.jpg?s=612x612&w=0&k=20&c=nzukZlsLNHbsWF7sZ26rrAnJUO7W6GndupLWsPxJe2k=" alt="product image" width="100%"></td>
 </tr>
         <tr>
-            <td width="50%" colspan="2"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14471.020557513806!2d67.10604699999999!3d24.940410149999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1678029477840!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
-            <td width="50%" colspan="2">https://youtu.be/4PVkATqwuGE</td>
+            <td width="50%" colspan="2"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14471.020557513806!2d67.10604699999999!3d24.940410149999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1678029477840!5m2!1sen!2s" width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
+            <td width="50%" colspan="2"><iframe sccr="https://youtu.be/4PVkATqwuGE" width= "100%" style="border:0"; allowfullscreen=""</iframe></td>
             
 </tbody>
 <tfoot>
