--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </tr>
         <tr>
             <td width="50%" colspan="2"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14471.020557513806!2d67.10604699999999!3d24.940410149999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1678029477840!5m2!1sen!2s" width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></td>
-            <td width="50%" colspan="2"><iframe sccr="<iframe width="560" height="315" src="https://www.youtube.com/embed/4PVkATqwuGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
+            <td width="50%" colspan="2"><iframe sccr="<iframe width="560" height="315" src="https://www.youtube.com/embed/4PVkATqwuGE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe></td>
             
 </tbody>
 <tfoot>
